Revert "Changed how checker framework is compiled"
This reverts commit 2a8410b6