@@ -12,12 +12,6 @@
 	
 	<artifactId>parties-api</artifactId>
 	
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<checkerFrameworkVersion>3.11.0</checkerFrameworkVersion>
-		<errorProneVersion>9+181-r4173-1</errorProneVersion>
-	</properties>
-	
 	<build>
 		<directory>${basedir}/target</directory>
 		<plugins>
@@ -42,110 +36,19 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>properties</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
-	
-	<profiles>
-		<profile>
-			<id>checkerframework</id>
-			<activation>
-				<jdk>[1.8,13)</jdk>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<version>3.8.1</version>
-					</plugin>
-				</plugins>
-			</build>
-			<dependencies>
-				<dependency>
-					<groupId>org.checkerframework</groupId>
-					<artifactId>checker</artifactId>
-					<version>${checkerFrameworkVersion}</version>
-				</dependency>
-			</dependencies>
-		</profile>
-		
-		<profile>
-			<id>checkerframework-jdk8</id>
-			<activation>
-				<jdk>1.8</jdk>
-			</activation>
-			<!-- using github.com/google/error-prone-javac is required when running on JDK 8 -->
-			<properties>
-				<javac.version>${errorProneVersion}</javac.version>
-			</properties>
-			<dependencies>
-				<dependency>
-					<groupId>com.google.errorprone</groupId>
-					<artifactId>javac</artifactId>
-					<version>${errorProneVersion}</version>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<configuration>
-							<fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
-							<source>1.8</source>
-							<target>1.8</target>
-							<compilerArgs combine.children="append">
-								<arg>-J-Xbootclasspath/p:${settings.localRepository}/com/google/errorprone/javac/${javac.version}/javac-${javac.version}.jar</arg>
-							</compilerArgs>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		
-		<profile>
-			<id>checkerframework-jdk11</id>
-			<activation>
-				<jdk>11</jdk>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<configuration>
-							<fork>true</fork>
-							<release>11</release>
-							<compilerArgs combine.children="append">
-								<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-							</compilerArgs>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 	
 	<dependencies>
 		<dependency>
 			<groupId>org.checkerframework</groupId>
 			<artifactId>checker-qual</artifactId>
-			<version>${checkerFrameworkVersion}</version>
+			<version>3.11.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.errorprone</groupId>
 			<artifactId>javac</artifactId>
-			<version>${errorProneVersion}</version>
+			<version>9+181-r4173-1</version>
 		</dependency>
 		
 		<dependency>
